# resea

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Doxyfile  HACKING.md  INTERNALS.md  Kconfig  LICENSE.md  Makefile  README.md  book.toml  interface.idl  interfaces.idl  kernel_design.h
kernel/: Cargo.toml  Kconfig  allocator.rs  arch.h  boot.c  boot.h  boot.rs  build.mk  channel.c  channel.rs  collections.c  collections.rs  debug.c  debug.rs  initfs.S  initfs.rs  interface.idl  ipc.c  ipc.h  ipc.rs  kdebug.c  kdebug.h  kernel.mk  lib.rs  main.c  main.h  memory.c  memory.h  memory.rs  messages.idl  printk.c  printk.h  printk.rs  process.c  process.rs  server.c  server.rs  stats.rs  syscall.c  syscall.h  (+7 more)
kernel/arch/: mod.rs  string.c  utils.rs
kernel/arch/arm/: Kconfig  arch.h  arch.mk  boot.S  build.mk  init.c  interrupt.c  kernel.ld  mp.c  peripherals.c  peripherals.h  switch.S  task.c  vm.c
kernel/arch/arm64/: Kconfig  arch.h  asm.h  boot.S  build.mk  init.c  interrupt.c  kernel.ld  mp.c  peripherals.c  peripherals.h  switch.S  task.c  trap.S  usercopy.S  vm.c  vm.h
kernel/arch/example/: Kconfig  arch.h  boot.S  (+8 more)
kernel/include/: arch.h  boot.h  bootinfo.h  channel.h  collections.h  color.h  config.h  debug.h  idl.h  init_args.h  ipc.h  memory.h  message.h  printk.h  process.h  server.h  syscall.h  table.h  thread.h  timer.h  types.h
kernel/support/: backtrace.c  kasan.c  kdebug.c  printk.c  stack_protector.c  stats.c  ubsan.c
servers/drvmgr/: Cargo.toml  build.mk
servers/virtio-net/: Cargo.toml  Xargo.toml
(+1141 files in other folders)
